--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> Clp component library </h1>
-    <p> this is CLp's library that we are making to learn Web development </p>
+    <h1 class="header"> Component library </h1>
+    <p id="para"> This is library that we are making to learn Web development </p>
     <hr>
-    <h2>@typography</h2>
-    <h1>this is the biggest heading available</h1>
-    <h2>this is  second biggest heading available</h2>
-    <h3>this is third biggest heading available</h3>
-    <h4>this is third smallest heading available</h4>
-    <h5>this is second smallest heading available</h5>
-    <h6>this is smallest heading available</h6>
+    <h2 class="header">Typography</h2>
+    <h1>This is biggest heading </h1>
+    <h2>This is Second biggest heading </h2>
+    <h3>This is third biggest heading </h3>
+    <h4>This is third smallest heading </h4>
+    <h5>This is second smallest heading </h5>
+    <h6>This is smallest heading </h6>
     <hr>
 
 
@@ -31,7 +31,7 @@
     <div class="Links">
     <a class="Links link1" href="#">primary link</a>
     <a class="Links link2" href="#">secondary link</a>
-    <a class="Links link3" href="#">teritary link</a>
+    <a class="link3" href="#">tertiary link</a>
 
     </div>
     <hr>
@@ -71,9 +71,9 @@
     <hr>
 
     <h2>@header</h2>
-    <header class="hero">
-            <img class="hero-img" src="image/coder1.svg" alt="HTML CSS JS Image" "="">
-            <h2 class="hero-heading">Anushka Engavle the<span class="hero-colored"> Web developer </span></h2>
+    <header class="image">
+            <img class="image1" src="pillar of life.png" alt="pillar of life">
+            <h2 class="image2">pillar of <span class="image3">life</span></h2>
     </header>
     <hr>
 
